2009-09-24 Maxim
- FIX:/UI/Vision: Rounding of the elements' widths is added for the primitive ElFigure to synchronize it with the WebVision.


2009-09-22 Roman
- !!!!:SYS, DAQ.JavaLikeCalc: DOM mechanism to OpenSCADA objects is released, based on user object "TCntrNodeObj".
- !!!!:Transport: DOM function messIO() is added to output transports for direct requests allow for users allow.
- FIX:Transport: Manualy request sending resource alloc is fixed.
- !!:DAQ.DAQGate: Documents is updated and released version 0.8.0.
- !!:DAQ.DCON: Documents is updated and released version 0.3.0.
- DAQ.ICP_DAS: Front led control is realised for modules I-87019 and I-8017HW.
- !!:DAQ.ICP_DAS: Documents is created and released version 0.5.0.
- FIX:DAQ.JavaLikeCalc: The object's properties loading sequence is fixed. Some any fixes is made.
- !!:Special.FLibSYS: New user's functions strEnc2Bin() and strDec4Bin() is added. Microseconds time's part is added to function FFT().
- Special.FLibSYS, Special.FLibComplex1: Translation the document to English is added.


2009-09-18 Roman
- !!:DAQ.BlockCalc: Documents is updated and released version 1.2.1.
- !!:DAQ.JavaLikeCalc: Documents is updated and released version 1.5.0.
- !!:DAQ.LogicLev: Documents is updated and released version 1.0.1.
- !!:DAQ.ModBus: Documents is updated and released version 1.0.1.
- !!:DAQ.Siemens: Documents is updated and released version 1.2.1.


2009-09-17 Roman
- !:DAQ.ModBus: Calc acquisition task by cron schedule is added.


2009-09-17 Maxim
- FIX:/UI/Vision: Line's styles saving and unscaling the widths when exiting the edit mode are fixed.


2009-09-16 Roman
- FIX:DAQ.JavaLikeCalc: Frequency value into attribute "f_frq" is fixed.
- Protocol.SelfSystem: Documents is updated.
- !:Special.FLibComplex1: The "cycle" attribute of function "PID" is changed to "f_frq".
- !!:Special.FLibComplex1: Documents is updated and released version 1.0.4.
- !:Special.FLibMath: Documents is updated and English document is added.